--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,65 @@
-requests==2.24.0
-termcolor==1.1.0
-pandas==1.1.4
-filetype==1.0.7
-requests_html==0.10.0
-PyExecJS==1.5.1
+anyio==4.4.0
+appdirs==1.4.4
+beautifulsoup4==4.12.3
+black==24.4.2
+bs4==0.0.2
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+cssselect==1.2.0
+decorator==5.1.1
+et-xmlfile==1.1.0
+exceptiongroup==1.2.1
+fake-useragent==1.5.1
+filelock==3.15.4
+filetype==1.2.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
 imgcat==0.5.0
-openpyxl==3.0.7
-Pillow==8.2.0
+importlib_metadata==8.0.0
+Jinja2==3.1.4
+lxml==5.2.2
+lxml_html_clean==0.1.1
+MarkupSafe==2.1.5
+mypy-extensions==1.0.0
+numpy==2.0.0
+ollama==0.2.1
+openpyxl==3.1.5
+packaging==24.1
+pandas==2.2.2
+parse==1.20.2
+pathspec==0.12.1
+pillow==10.4.0
+platformdirs==4.2.2
+prettytable==3.10.0
 progressbar33==2.4
-pyecharts==1.9.0
-pygame==2.0.1
+py==1.11.0
+pyecharts==2.0.6
+pyee==11.1.0
+PyExecJS==1.5.1
+pygame==2.6.0
+pyppeteer==2.0.0
+pyquery==2.0.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+requests==2.32.3
+requests-html==0.10.0
 retry==0.9.2
-urlextract==1.3.0
+simplejson==3.19.2
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.5
+termcolor==2.4.0
+tomli==2.0.1
+tqdm==4.66.4
+typing_extensions==4.12.2
+tzdata==2024.1
+uritools==4.0.3
+urlextract==1.9.0
+urllib3==1.26.19
+w3lib==2.2.1
+wcwidth==0.2.13
+websockets==10.4
+zipp==3.19.2
